--- a/next-cms/package.json
+++ b/next-cms/package.json
@@ -6,7 +6,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "npm run build"
   },
   "dependencies": {
     "next": "15.3.3",
